// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductGridItem component renders ProductGridItem / Price replace non digits 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between flex-col"
    role="button"
    tabindex="0"
  >
    <img
      alt="IPhone 12"
      class="max-w-full h-auto rounded-2xl bg-white border-2 border-gray-300"
      src="	https://cdn.vatanbilgisayar.com/Upload/PRODUCT/samsung/thumb/121967_large.jpg"
    />
    <div>
      <p
        class="text-xl text-left mt-5 mb-2"
      >
        IPhone 12
      </p>
      <p
        class="text-xl text-center"
      >
        $ 123.44
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProductGridItem component renders ProductGridItem 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between flex-col"
    role="button"
    tabindex="0"
  >
    <img
      alt="IPhone 12"
      class="max-w-full h-auto rounded-2xl bg-white border-2 border-gray-300"
      src="	https://cdn.vatanbilgisayar.com/Upload/PRODUCT/samsung/thumb/121967_large.jpg"
    />
    <div>
      <p
        class="text-xl text-left mt-5 mb-2"
      >
        IPhone 12
      </p>
      <p
        class="text-xl text-center"
      >
        $ 123.00
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders ProductGridItem 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between flex-col"
    role="button"
    tabindex="0"
  >
    <img
      alt="IPhone 12"
      class="max-w-full h-auto rounded-2xl bg-white border-2 border-gray-300"
      src="	https://cdn.vatanbilgisayar.com/Upload/PRODUCT/samsung/thumb/121967_large.jpg"
    />
    <div>
      <p
        class="text-xl text-left mt-5 mb-2"
      >
        IPhone 12
      </p>
      <p
        class="text-xl text-center"
      >
        $ 123.00
      </p>
    </div>
  </div>
</DocumentFragment>
`;
